# lumix

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
docs/: architecture.md  modules.md  usage.md
lumix/: __init__.py
lumix.egg-info/: SOURCES.txt  entry_points.txt
lumix/age/: __init__.py  convert.py  parser.py
lumix/area/: __init__.py  convert.py  parser.py
lumix/base/: __init__.py  convert.py
lumix/bases/: parser.py
lumix/bitrate/: __init__.py  convert.py  parser.py
lumix/calendar/: __init__.py  convert.py  parser.py
lumix/cli/: __init__.py  main.py
lumix/color/: __init__.py  convert.py  parser.py
lumix/common/: __init__.py  lang.py  validate.py
lumix/country/: __init__.py  convert.py  parser.py
lumix/currency/: __init__.py  api.py  convert.py  parser.py  utils.py
lumix/data/: __init__.py  convert.py  parser.py
lumix/date/: __init__.py  convert.py  parser.py
scripts/: update_rates.py
tests/: conftest.py  test_age.py  test_area.py  test_bases.py  test_bitrate.py  test_calendar.py  test_color.py  test_country.py  test_currency.py  test_data.py  test_date.py  test_energy.py  test_hash.py  test_iptools.py  test_language.py  test_length.py  test_morse.py  test_passwords.py  test_phonetic.py  test_power.py  test_pressure.py  test_roman.py  test_speed.py  test_spoken.py  test_temps.py  test_time.py  test_timezonebot.py  test_timezones.py  test_unitsymbols.py  test_volume.py  test_weight.py
(+74 files in other folders)
