
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumix"
version = "0.1.0"
description = "Multilingual, modular CLI converter"
authors = [
    { name="Davide Ferigato", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "argcomplete"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Utilities"
]
keywords = ["cli", "converter", "multilingual", "temperature", "currency", "bases"]
license = { text = "MIT" }

[project.scripts]
lumix = "lumix.cli.main:run_cli"


[tool.setuptools.packages.find]
include = ["lumix", "lumix.*"]